--- a/src/templates/views/index.hbs
+++ b/src/templates/views/index.hbs
@@ -8,22 +8,22 @@
 </head>
 
 <body>
-  <svg width="{{_ 205}}" height="{{_ 105}}">
-    <g class="grid x-grid" id="x-grid1">
-      <line x1="0" y1="0" x2="205" y2="0"/>
-      <line x1="0" y1="25" x2="205" y2="25"/>
-      <line x1="0" y1="50" x2="205" y2="50"/>
-      <line x1="0" y1="75" x2="205" y2="75"/>
-      <line x1="0" y1="100" x2="205" y2="100"/>
+  <svg width="{{_ 210}}" height="{{_ 110}}">
+    <g class="grid x-grid">
+      <line x1="{{_ 0}}" y1="{{_ 0}}" x2="{{_ 210}}" y2="{{_ 0}}"/>
+      <line x1="{{_ 0}}" y1="{{_ 25}}" x2="{{_ 210}}" y2="{{_ 25}}"/>
+      <line x1="{{_ 0}}" y1="{{_ 50}}" x2="{{_ 210}}" y2="{{_ 50}}"/>
+      <line x1="{{_ 0}}" y1="{{_ 75}}" x2="{{_ 210}}" y2="{{_ 75}}"/>
+      <line x1="{{_ 0}}" y1="{{_ 100}}" x2="{{_ 210}}" y2="{{_ 100}}"/>
     </g>
-    <g class="grid y-grid" id="y-grid1">
-      <line x1="5" y1="0" x2="5" y2="205"/>
-      <line x1="55" y1=0 x2="55" y2="205"/>
-      <line x1="105" y1=0 x2="105" y2="205"/>
-      <line x1="155" y1=0 x2="155" y2="205"/>
-      <line x1="205" y1=0 x2="205" y2="205"/>
+    <g class="grid y-grid">
+      <line x1="{{_ 10}}" y1="{{_ 0}}" x2="{{_ 10}}" y2="{{_ 110}}"/>
+      <line x1="{{_ 60}}" y1="{{_ 0}}" x2="{{_ 60}}" y2="{{_ 110}}"/>
+      <line x1="{{_ 110}}" y1="{{_ 0}}" x2="{{_ 110}}" y2="{{_ 110}}"/>
+      <line x1="{{_ 160}}" y1="{{_ 0}}" x2="{{_ 160}}" y2="{{_ 110}}"/>
+      <line x1="{{_ 210}}" y1="{{_ 0}}" x2="{{_ 210}}" y2="{{_ 110}}"/>
     </g>
   </svg>
-</bod
+</body>
 
 </html>
