--- a/src/templates/views/index.hbs
+++ b/src/templates/views/index.hbs
@@ -8,22 +8,7 @@
 </head>
 
 <body>
-  <svg width="{{_ 210}}" height="{{_ 110}}">
-    <g class="grid x-grid">
-      <line x1="{{_ 0}}" y1="{{_ 0}}" x2="{{_ 210}}" y2="{{_ 0}}"/>
-      <line x1="{{_ 0}}" y1="{{_ 25}}" x2="{{_ 210}}" y2="{{_ 25}}"/>
-      <line x1="{{_ 0}}" y1="{{_ 50}}" x2="{{_ 210}}" y2="{{_ 50}}"/>
-      <line x1="{{_ 0}}" y1="{{_ 75}}" x2="{{_ 210}}" y2="{{_ 75}}"/>
-      <line x1="{{_ 0}}" y1="{{_ 100}}" x2="{{_ 210}}" y2="{{_ 100}}"/>
-    </g>
-    <g class="grid y-grid">
-      <line x1="{{_ 10}}" y1="{{_ 0}}" x2="{{_ 10}}" y2="{{_ 110}}"/>
-      <line x1="{{_ 60}}" y1="{{_ 0}}" x2="{{_ 60}}" y2="{{_ 110}}"/>
-      <line x1="{{_ 110}}" y1="{{_ 0}}" x2="{{_ 110}}" y2="{{_ 110}}"/>
-      <line x1="{{_ 160}}" y1="{{_ 0}}" x2="{{_ 160}}" y2="{{_ 110}}"/>
-      <line x1="{{_ 210}}" y1="{{_ 0}}" x2="{{_ 210}}" y2="{{_ 110}}"/>
-    </g>
-  </svg>
+  {{{graphic}}}
 </body>
 
 </html>
