--- a/tests/test.hbs
+++ b/tests/test.hbs
@@ -42,7 +42,7 @@
             }
 
             svg {
-                fill:
+                background: linear-gradient(0deg,#66b5cb 0%, #3e9db8 25%, #34849b 50%, #2a6b7e 75%, #205261 100%)
             }
 
             .grid {
@@ -55,7 +55,7 @@
             }
 
             .surfaces {
-                background: linear-gradient(0deg, #e5afc4 0%, #d782a3 25%, #cd648d 50%, #c44677 75%, #9d325c 100%);
+                fill: linear-gradient(0deg, #e5afc4 0%, #d782a3 25%, #cd648d 50%, #c44677 75%, #9d325c 100%);
             }
         </style>
     </svg>
